<resources>
    <string name="app_name">Court Counter App</string>
    <string name="team_name">Team Name</string>
    <string name="score">00</string>
    <string name="point1">1 Point</string>
    <string name="point2">2 Points</string>
    <string name="point3">3 Points</string>
    <string name="reset">Reset</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
</resources>
